# project1_fastapi

./: converter.py  pyproject.toml  routers.py  schamas.py  schemas.py
