[tool.poetry]
name = "project1-fastapi"
version = "0.1.0"
description = ""
authors = ["Guilherme <guilhermetestaws@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
requests = "^2.31.0"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
